apps/jjinbbang-api/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: jjinbbang-dev
  labels:
    app.kubernetes.io/part-of: jjinbbang
    app.kubernetes.io/environment: dev
