apps/jjinbbang-api/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jjinbbang-api
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: jjinbbang-api
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 768Mi
