apps/jjinbbang-api/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jjinbbang-api
spec:
  tls:
    - hosts:
        - api-dev.jjinbbang.kr
      secretName: jjinbbang-api-dev-tls
  rules:
    - host: api-dev.jjinbbang.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jjinbbang-api
                port:
                  number: 8080
